# monkey_interpreter_cpp

./: CMakeLists.txt  main.cpp  test.cpp
include/: lexer.hpp  token.hpp
src/: lexer.cpp  token.cpp
test/: test.cpp
